fix: eliminate double copy in ArrowTableLoader; add H/I/J to DuckDB validator benchmarks; split TEST_RESULTS.md into ingestor/validator files
Agent-Logs-Url: https://github.com/balchua/java-arrow-pain/sessions/64eb6a34-674d-4a51-ba23-bd632c639024

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>